--- a/WebContent/resources/css/main.css
+++ b/WebContent/resources/css/main.css
@@ -149,7 +149,49 @@ code {
 	margin-left: 10px;
 }
 
+.message {
+	margin-bottom: 20px;
+	border-bottom: 1px dashed;
+	width: 500px;
 
+}
+
+span.subject {
+	font-size: large;
+	font-weight: bold;
+}
+
+span.messageBody {
+	display: block;
+	font-style: italic;
+}
+
+span.messageName {
+	font-size: small;
+}
+
+form.replyForm {
+	display: none;
+}
+
+textarea.replyArea {
+	width: 250px;
+	height: 50px;
+	margin-top: 10px;
+}
+
+input.replyButton {
+	display: block;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+span.alert {
+	/* display: block; */
+	font-weight: bold;
+	color: green;
+	margin-left: -15px;
+}
 
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
